@@ -9,16 +9,20 @@ package org.elasticsearch.xpack.esql.optimizer.rules.physical.local;
 
 import org.elasticsearch.common.logging.LoggerMessageFormat;
 import org.elasticsearch.common.settings.Settings;
+import org.elasticsearch.common.util.CollectionUtils;
+import org.elasticsearch.core.Nullable;
 import org.elasticsearch.index.query.BoolQueryBuilder;
 import org.elasticsearch.index.query.MatchQueryBuilder;
 import org.elasticsearch.index.query.QueryBuilder;
 import org.elasticsearch.index.query.RangeQueryBuilder;
 import org.elasticsearch.xpack.esql.EsqlTestUtils;
+import org.elasticsearch.xpack.esql.action.EsqlCapabilities;
 import org.elasticsearch.xpack.esql.core.expression.Alias;
 import org.elasticsearch.xpack.esql.core.expression.Attribute;
 import org.elasticsearch.xpack.esql.core.expression.Expression;
 import org.elasticsearch.xpack.esql.core.expression.Expressions;
 import org.elasticsearch.xpack.esql.core.expression.FieldAttribute;
+import org.elasticsearch.xpack.esql.core.expression.Literal;
 import org.elasticsearch.xpack.esql.core.expression.NamedExpression;
 import org.elasticsearch.xpack.esql.core.expression.ReferenceAttribute;
 import org.elasticsearch.xpack.esql.core.expression.function.Function;
@@ -27,14 +31,17 @@ import org.elasticsearch.xpack.esql.core.type.DataType;
 import org.elasticsearch.xpack.esql.expression.function.grouping.Bucket;
 import org.elasticsearch.xpack.esql.expression.function.scalar.date.DateTrunc;
 import org.elasticsearch.xpack.esql.expression.function.scalar.math.RoundTo;
+import org.elasticsearch.xpack.esql.expression.predicate.operator.comparison.GreaterThan;
 import org.elasticsearch.xpack.esql.optimizer.AbstractLocalPhysicalPlanOptimizerTests;
 import org.elasticsearch.xpack.esql.optimizer.TestPlannerOptimizer;
 import org.elasticsearch.xpack.esql.plan.logical.EsRelation;
 import org.elasticsearch.xpack.esql.plan.physical.AggregateExec;
 import org.elasticsearch.xpack.esql.plan.physical.EsQueryExec;
+import org.elasticsearch.xpack.esql.plan.physical.EsStatsQueryExec;
 import org.elasticsearch.xpack.esql.plan.physical.EvalExec;
 import org.elasticsearch.xpack.esql.plan.physical.ExchangeExec;
 import org.elasticsearch.xpack.esql.plan.physical.FieldExtractExec;
+import org.elasticsearch.xpack.esql.plan.physical.FilterExec;
 import org.elasticsearch.xpack.esql.plan.physical.FragmentExec;
 import org.elasticsearch.xpack.esql.plan.physical.LimitExec;
 import org.elasticsearch.xpack.esql.plan.physical.LookupJoinExec;
@@ -68,13 +75,15 @@ import static org.elasticsearch.xpack.esql.type.EsqlDataTypeConverter.DEFAULT_DA
 import static org.elasticsearch.xpack.esql.type.EsqlDataTypeConverter.DEFAULT_DATE_TIME_FORMATTER;
 import static org.elasticsearch.xpack.esql.type.EsqlDataTypeConverter.dateNanosToLong;
 import static org.elasticsearch.xpack.esql.type.EsqlDataTypeConverter.dateTimeToLong;
+import static org.hamcrest.Matchers.empty;
 import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.hasSize;
+import static org.hamcrest.Matchers.instanceOf;
 import static org.hamcrest.Matchers.is;
+import static org.hamcrest.Matchers.not;
 
-//@TestLogging(value = "org.elasticsearch.xpack.esql:TRACE", reason = "debug")
-public class ReplaceRoundToWithQueryAndTagsTests extends AbstractLocalPhysicalPlanOptimizerTests {
-
-    public ReplaceRoundToWithQueryAndTagsTests(String name, Configuration config) {
+public class SubstituteRoundToTests extends AbstractLocalPhysicalPlanOptimizerTests {
+    public SubstituteRoundToTests(String name, Configuration config) {
         super(name, config);
     }
 
@@ -132,31 +141,111 @@ public class ReplaceRoundToWithQueryAndTagsTests extends AbstractLocalPhysicalPl
                 from test
                 | stats count(*) by x = {}
                 """, dateHistogram);
-            PhysicalPlan plan = plannerOptimizer.plan(query, searchStats, makeAnalyzer("mapping-all-types.json"));
 
-            LimitExec limit = as(plan, LimitExec.class);
-            AggregateExec agg = as(limit.child(), AggregateExec.class);
-            assertThat(agg.getMode(), is(FINAL));
-            List<? extends Expression> groupings = agg.groupings();
-            NamedExpression grouping = as(groupings.get(0), NamedExpression.class);
-            assertEquals("x", grouping.name());
-            assertEquals(DataType.DATETIME, grouping.dataType());
-            assertEquals(List.of("count(*)", "x"), Expressions.names(agg.aggregates()));
-            ExchangeExec exchange = as(agg.child(), ExchangeExec.class);
-            assertThat(exchange.inBetweenAggs(), is(true));
-            agg = as(exchange.child(), AggregateExec.class);
-            EvalExec eval = as(agg.child(), EvalExec.class);
-            List<Alias> aliases = eval.fields();
+            ExchangeExec exchange = validatePlanBeforeExchange(query, DataType.DATETIME);
+
+            var queryBuilderAndTags = getBuilderAndTagsFromStats(exchange, DataType.DATETIME);
+
+            List<EsQueryExec.QueryBuilderAndTags> expectedQueryBuilderAndTags = expectedQueryBuilderAndTags(
+                query,
+                "date",
+                List.of(),
+                new Source(2, 24, dateHistogram),
+                null
+            );
+            verifyQueryAndTags(expectedQueryBuilderAndTags, queryBuilderAndTags);
+        }
+    }
+
+    // Pushing count to source isn't supported when there is a filter on the count at the moment.
+    public void testDateTruncBucketTransformToQueryAndTagsWithWhereInsideAggregation() {
+        for (String dateHistogram : dateHistograms) {
+            String query = LoggerMessageFormat.format(null, """
+                from test
+                | stats count(*) where long > 10 by x = {}
+                """, dateHistogram);
+
+            ExchangeExec exchange = validatePlanBeforeExchange(query, DataType.DATETIME, List.of("count(*) where long > 10"));
+
+            AggregateExec agg = as(exchange.child(), AggregateExec.class);
+            FieldExtractExec fieldExtractExec = as(agg.child(), FieldExtractExec.class);
+            EvalExec evalExec = as(fieldExtractExec.child(), EvalExec.class);
+            List<Alias> aliases = evalExec.fields();
             assertEquals(1, aliases.size());
             FieldAttribute roundToTag = as(aliases.get(0).child(), FieldAttribute.class);
             assertEquals("$$date$round_to$datetime", roundToTag.name());
-            EsQueryExec esQueryExec = as(eval.child(), EsQueryExec.class);
+            EsQueryExec esQueryExec = as(evalExec.child(), EsQueryExec.class);
+
+            List<EsQueryExec.QueryBuilderAndTags> queryBuilderAndTags = esQueryExec.queryBuilderAndTags();
+            List<EsQueryExec.QueryBuilderAndTags> expectedQueryBuilderAndTags = expectedQueryBuilderAndTags(
+                query,
+                "date",
+                List.of(),
+                new Source(2, 40, dateHistogram),
+                null
+            );
+            verifyQueryAndTags(expectedQueryBuilderAndTags, queryBuilderAndTags);
+            assertThrows(UnsupportedOperationException.class, esQueryExec::query);
+        }
+    }
+
+    // We do not support count pushdown when there is an ES filter at the moment, even if it's on the same field.
+    public void testDateTruncBucketTransformToQueryAndTagsWithEsFilter() {
+        for (String dateHistogram : dateHistograms) {
+            String query = LoggerMessageFormat.format(null, """
+                from test
+                | stats count(*) by x = {}
+                """, dateHistogram);
+
+            RangeQueryBuilder esFilter = rangeQuery("date").from("2023-10-21T00:00:00.000Z").to("2023-10-22T00:00:00.000Z");
+            ExchangeExec exchange = validatePlanBeforeExchange(query, DataType.DATETIME, List.of("count(*)"), esFilter);
+
+            AggregateExec agg = as(exchange.child(), AggregateExec.class);
+            EvalExec evalExec = as(agg.child(), EvalExec.class);
+            List<Alias> aliases = evalExec.fields();
+            assertEquals(1, aliases.size());
+            FieldAttribute roundToTag = as(aliases.get(0).child(), FieldAttribute.class);
+            assertEquals("$$date$round_to$datetime", roundToTag.name());
+            EsQueryExec esQueryExec = as(evalExec.child(), EsQueryExec.class);
+
             List<EsQueryExec.QueryBuilderAndTags> queryBuilderAndTags = esQueryExec.queryBuilderAndTags();
             List<EsQueryExec.QueryBuilderAndTags> expectedQueryBuilderAndTags = expectedQueryBuilderAndTags(
                 query,
                 "date",
                 List.of(),
                 new Source(2, 24, dateHistogram),
+                esFilter
+            );
+            verifyQueryAndTags(expectedQueryBuilderAndTags, queryBuilderAndTags);
+            assertThrows(UnsupportedOperationException.class, esQueryExec::query);
+        }
+    }
+
+    // Pushing count to source isn't supported when there are multiple aggregates.
+    public void testDateTruncBucketTransformToQueryAndTagsWithMultipleAggregates() {
+        for (String dateHistogram : dateHistograms) {
+            String query = LoggerMessageFormat.format(null, """
+                from test
+                | stats sum(long), count(*) by x = {}
+                """, dateHistogram);
+
+            ExchangeExec exchange = validatePlanBeforeExchange(query, DataType.DATETIME, List.of("sum(long)", "count(*)"));
+
+            AggregateExec agg = as(exchange.child(), AggregateExec.class);
+            FieldExtractExec fieldExtractExec = as(agg.child(), FieldExtractExec.class);
+            EvalExec evalExec = as(fieldExtractExec.child(), EvalExec.class);
+            List<Alias> aliases = evalExec.fields();
+            assertEquals(1, aliases.size());
+            FieldAttribute roundToTag = as(aliases.get(0).child(), FieldAttribute.class);
+            assertEquals("$$date$round_to$datetime", roundToTag.name());
+            EsQueryExec esQueryExec = as(evalExec.child(), EsQueryExec.class);
+
+            List<EsQueryExec.QueryBuilderAndTags> queryBuilderAndTags = esQueryExec.queryBuilderAndTags();
+            List<EsQueryExec.QueryBuilderAndTags> expectedQueryBuilderAndTags = expectedQueryBuilderAndTags(
+                query,
+                "date",
+                List.of(),
+                new Source(2, 35, dateHistogram),
                 null
             );
             verifyQueryAndTags(expectedQueryBuilderAndTags, queryBuilderAndTags);
@@ -167,7 +256,7 @@ public class ReplaceRoundToWithQueryAndTagsTests extends AbstractLocalPhysicalPl
     // DateTrunc is transformed to RoundTo first but cannot be transformed to QueryAndTags, when the TopN is pushed down to EsQueryExec
     public void testDateTruncNotTransformToQueryAndTags() {
         for (String dateHistogram : dateHistograms) {
-            if (dateHistogram.contains("bucket")) { // bucket cannot be used out side of stats
+            if (dateHistogram.contains("bucket")) { // bucket cannot be used outside of stats
                 continue;
             }
             String query = LoggerMessageFormat.format(null, """
@@ -188,13 +277,13 @@ public class ReplaceRoundToWithQueryAndTagsTests extends AbstractLocalPhysicalPl
             EvalExec evalExec = as(fieldExtractExec.child(), EvalExec.class);
             List<Alias> aliases = evalExec.fields();
             assertEquals(1, aliases.size());
-            RoundTo roundTo = as(aliases.get(0).child(), RoundTo.class);
+            RoundTo roundTo = as(aliases.getFirst().child(), RoundTo.class);
             assertEquals(4, roundTo.points().size());
             fieldExtractExec = as(evalExec.child(), FieldExtractExec.class);
             EsQueryExec esQueryExec = as(fieldExtractExec.child(), EsQueryExec.class);
             List<EsQueryExec.QueryBuilderAndTags> queryBuilderAndTags = esQueryExec.queryBuilderAndTags();
             assertEquals(1, queryBuilderAndTags.size());
-            EsQueryExec.QueryBuilderAndTags queryBuilder = queryBuilderAndTags.get(0);
+            EsQueryExec.QueryBuilderAndTags queryBuilder = queryBuilderAndTags.getFirst();
             assertNull(queryBuilder.query());
             assertTrue(queryBuilder.tags().isEmpty());
             assertNull(esQueryExec.query());
@@ -215,25 +304,12 @@ public class ReplaceRoundToWithQueryAndTagsTests extends AbstractLocalPhysicalPl
                 from test
                 | stats count(*) by x = {}
                 """, expression);
-            PhysicalPlan plan = plannerOptimizer.plan(query, searchStats, makeAnalyzer("mapping-all-types.json"));
+            DataType bucketType = DataType.fromTypeName(roundTo.getKey()).widenSmallNumeric();
 
-            LimitExec limit = as(plan, LimitExec.class);
-            AggregateExec agg = as(limit.child(), AggregateExec.class);
-            assertThat(agg.getMode(), is(FINAL));
-            List<? extends Expression> groupings = agg.groupings();
-            NamedExpression grouping = as(groupings.get(0), NamedExpression.class);
-            assertEquals("x", grouping.name());
-            assertEquals(List.of("count(*)", "x"), Expressions.names(agg.aggregates()));
-            ExchangeExec exchange = as(agg.child(), ExchangeExec.class);
-            assertThat(exchange.inBetweenAggs(), is(true));
-            agg = as(exchange.child(), AggregateExec.class);
-            EvalExec eval = as(agg.child(), EvalExec.class);
-            List<Alias> aliases = eval.fields();
-            assertEquals(1, aliases.size());
-            FieldAttribute roundToTag = as(aliases.get(0).child(), FieldAttribute.class);
-            assertTrue(roundToTag.name().startsWith("$$" + fieldName + "$round_to$"));
-            EsQueryExec esQueryExec = as(eval.child(), EsQueryExec.class);
-            List<EsQueryExec.QueryBuilderAndTags> queryBuilderAndTags = esQueryExec.queryBuilderAndTags();
+            ExchangeExec exchange = validatePlanBeforeExchange(query, bucketType);
+
+            var queryBuilderAndTags = getBuilderAndTagsFromStats(exchange, bucketType);
+
             List<EsQueryExec.QueryBuilderAndTags> expectedQueryBuilderAndTags = expectedQueryBuilderAndTags(
                 query,
                 fieldName,
@@ -242,7 +318,6 @@ public class ReplaceRoundToWithQueryAndTagsTests extends AbstractLocalPhysicalPl
                 null
             );
             verifyQueryAndTags(expectedQueryBuilderAndTags, queryBuilderAndTags);
-            assertThrows(UnsupportedOperationException.class, esQueryExec::query);
         }
     }
 
@@ -266,25 +341,16 @@ public class ReplaceRoundToWithQueryAndTagsTests extends AbstractLocalPhysicalPl
                         new Source(2, 8, predicate.contains("and") ? predicate.substring(0, 20) : predicate)
                     );
 
-                PhysicalPlan plan = plannerOptimizer.plan(query, searchStats, makeAnalyzer("mapping-all-types.json"));
+                ExchangeExec exchange = validatePlanBeforeExchange(query, DataType.DATETIME);
 
-                LimitExec limit = as(plan, LimitExec.class);
-                AggregateExec agg = as(limit.child(), AggregateExec.class);
-                assertThat(agg.getMode(), is(FINAL));
-                List<? extends Expression> groupings = agg.groupings();
-                NamedExpression grouping = as(groupings.get(0), NamedExpression.class);
-                assertEquals("x", grouping.name());
-                assertEquals(DataType.DATETIME, grouping.dataType());
-                assertEquals(List.of("count(*)", "x"), Expressions.names(agg.aggregates()));
-                ExchangeExec exchange = as(agg.child(), ExchangeExec.class);
-                assertThat(exchange.inBetweenAggs(), is(true));
-                agg = as(exchange.child(), AggregateExec.class);
+                AggregateExec agg = as(exchange.child(), AggregateExec.class);
                 EvalExec eval = as(agg.child(), EvalExec.class);
                 List<Alias> aliases = eval.fields();
                 assertEquals(1, aliases.size());
                 FieldAttribute roundToTag = as(aliases.get(0).child(), FieldAttribute.class);
                 assertEquals("$$date$round_to$datetime", roundToTag.name());
                 EsQueryExec esQueryExec = as(eval.child(), EsQueryExec.class);
+
                 List<EsQueryExec.QueryBuilderAndTags> queryBuilderAndTags = esQueryExec.queryBuilderAndTags();
                 List<EsQueryExec.QueryBuilderAndTags> expectedQueryBuilderAndTags = expectedQueryBuilderAndTags(
                     query,
@@ -325,39 +391,29 @@ public class ReplaceRoundToWithQueryAndTagsTests extends AbstractLocalPhysicalPl
                 | lookup join languages_lookup on language_code
                 | stats count(*) by x = {}
                 """, dateHistogram);
-            PhysicalPlan plan = plannerOptimizer.plan(query, searchStats, makeAnalyzer("mapping-all-types.json"));
+            ExchangeExec exchange = validatePlanBeforeExchange(query, DataType.DATETIME);
 
-            LimitExec limit = as(plan, LimitExec.class);
-            AggregateExec agg = as(limit.child(), AggregateExec.class);
-            assertThat(agg.getMode(), is(FINAL));
-            List<? extends Expression> groupings = agg.groupings();
-            NamedExpression grouping = as(groupings.get(0), NamedExpression.class);
-            assertEquals("x", grouping.name());
-            assertEquals(DataType.DATETIME, grouping.dataType());
-            assertEquals(List.of("count(*)", "x"), Expressions.names(agg.aggregates()));
-            ExchangeExec exchange = as(agg.child(), ExchangeExec.class);
-            assertThat(exchange.inBetweenAggs(), is(true));
-            agg = as(exchange.child(), AggregateExec.class);
+            AggregateExec agg = as(exchange.child(), AggregateExec.class);
             EvalExec eval = as(agg.child(), EvalExec.class);
             List<Alias> aliases = eval.fields();
             assertEquals(1, aliases.size());
-            RoundTo roundTo = as(aliases.get(0).child(), RoundTo.class);
+            RoundTo roundTo = as(aliases.getFirst().child(), RoundTo.class);
             assertEquals(4, roundTo.points().size());
             FieldExtractExec fieldExtractExec = as(eval.child(), FieldExtractExec.class);
             List<Attribute> attributes = fieldExtractExec.attributesToExtract();
             assertEquals(1, attributes.size());
-            assertEquals("date", attributes.get(0).name());
+            assertEquals("date", attributes.getFirst().name());
             LookupJoinExec lookupJoinExec = as(fieldExtractExec.child(), LookupJoinExec.class); // this is why the rule doesn't apply
             // lhs of lookup join
             fieldExtractExec = as(lookupJoinExec.left(), FieldExtractExec.class);
             attributes = fieldExtractExec.attributesToExtract();
             assertEquals(1, attributes.size());
-            assertEquals("integer", attributes.get(0).name());
+            assertEquals("integer", attributes.getFirst().name());
             EsQueryExec esQueryExec = as(fieldExtractExec.child(), EsQueryExec.class);
             assertEquals("test", esQueryExec.indexPattern());
             List<EsQueryExec.QueryBuilderAndTags> queryBuilderAndTags = esQueryExec.queryBuilderAndTags();
             assertEquals(1, queryBuilderAndTags.size());
-            EsQueryExec.QueryBuilderAndTags queryBuilder = queryBuilderAndTags.get(0);
+            EsQueryExec.QueryBuilderAndTags queryBuilder = queryBuilderAndTags.getFirst();
             assertNull(queryBuilder.query());
             assertTrue(queryBuilder.tags().isEmpty());
             assertNull(esQueryExec.query());
@@ -383,14 +439,14 @@ public class ReplaceRoundToWithQueryAndTagsTests extends AbstractLocalPhysicalPl
             AggregateExec agg = as(limit.child(), AggregateExec.class);
             assertThat(agg.getMode(), is(SINGLE));
             List<? extends Expression> groupings = agg.groupings();
-            NamedExpression grouping = as(groupings.get(0), NamedExpression.class);
+            NamedExpression grouping = as(groupings.getFirst(), NamedExpression.class);
             assertEquals("x", grouping.name());
             assertEquals(DataType.DATETIME, grouping.dataType());
             assertEquals(List.of("count(*)", "x"), Expressions.names(agg.aggregates()));
             EvalExec eval = as(agg.child(), EvalExec.class);
             List<Alias> aliases = eval.fields();
             assertEquals(1, aliases.size());
-            var function = as(aliases.get(0).child(), Function.class);
+            var function = as(aliases.getFirst().child(), Function.class);
             ReferenceAttribute fa = null; // if merge returns FieldAttribute instead of ReferenceAttribute, the rule might apply
             if (function instanceof DateTrunc dateTrunc) {
                 fa = as(dateTrunc.field(), ReferenceAttribute.class);
@@ -402,7 +458,7 @@ public class ReplaceRoundToWithQueryAndTagsTests extends AbstractLocalPhysicalPl
             assertNotNull(fa);
             assertEquals("date", fa.name());
             assertEquals(DataType.DATETIME, fa.dataType());
-            MergeExec mergeExec = as(eval.child(), MergeExec.class);
+            as(eval.child(), MergeExec.class);
         }
     }
 
@@ -424,42 +480,44 @@ public class ReplaceRoundToWithQueryAndTagsTests extends AbstractLocalPhysicalPl
                 | stats count(*) by x = round_to(integer, {})
                 """, points.toString());
 
-            PhysicalPlan plan = plannerOptimizer.plan(query, searchStats, makeAnalyzer("mapping-all-types.json"));
+            ExchangeExec exchange = validatePlanBeforeExchange(query, DataType.INTEGER);
 
-            LimitExec limit = as(plan, LimitExec.class);
-            AggregateExec agg = as(limit.child(), AggregateExec.class);
-            assertThat(agg.getMode(), is(FINAL));
-            List<? extends Expression> groupings = agg.groupings();
-            NamedExpression grouping = as(groupings.get(0), NamedExpression.class);
-            assertEquals("x", grouping.name());
-            assertEquals(DataType.INTEGER, grouping.dataType());
-            assertEquals(List.of("count(*)", "x"), Expressions.names(agg.aggregates()));
-            ExchangeExec exchange = as(agg.child(), ExchangeExec.class);
-            assertThat(exchange.inBetweenAggs(), is(true));
-            agg = as(exchange.child(), AggregateExec.class);
-            EvalExec evalExec = as(agg.child(), EvalExec.class);
-            List<Alias> aliases = evalExec.fields();
-            assertEquals(1, aliases.size());
             if (numOfPoints == 127) {
-                FieldAttribute roundToTag = as(aliases.get(0).child(), FieldAttribute.class);
-                assertTrue(roundToTag.name().startsWith("$$integer$round_to$"));
-                EsQueryExec esQueryExec = as(evalExec.child(), EsQueryExec.class);
-                List<EsQueryExec.QueryBuilderAndTags> queryBuilderAndTags = esQueryExec.queryBuilderAndTags();
-                assertEquals(128, queryBuilderAndTags.size()); // 127 + nullBucket
-                assertThrows(UnsupportedOperationException.class, esQueryExec::query);
+                var queryBuilderAndTags = getBuilderAndTagsFromStats(exchange, DataType.INTEGER);
+                assertThat(queryBuilderAndTags, hasSize(128)); // 127 + nullBucket
             } else { // numOfPoints == 128, query rewrite does not happen
-                RoundTo roundTo = as(aliases.get(0).child(), RoundTo.class);
+                AggregateExec agg = as(exchange.child(), AggregateExec.class);
+                EvalExec evalExec = as(agg.child(), EvalExec.class);
+                List<Alias> aliases = evalExec.fields();
+                assertEquals(1, aliases.size());
+                RoundTo roundTo = as(aliases.getFirst().child(), RoundTo.class);
                 assertEquals(128, roundTo.points().size());
                 FieldExtractExec fieldExtractExec = as(evalExec.child(), FieldExtractExec.class);
                 EsQueryExec esQueryExec = as(fieldExtractExec.child(), EsQueryExec.class);
                 List<EsQueryExec.QueryBuilderAndTags> queryBuilderAndTags = esQueryExec.queryBuilderAndTags();
                 assertEquals(1, queryBuilderAndTags.size());
-                EsQueryExec.QueryBuilderAndTags queryBuilder = queryBuilderAndTags.get(0);
+                EsQueryExec.QueryBuilderAndTags queryBuilder = queryBuilderAndTags.getFirst();
                 assertNull(queryBuilder.query());
                 assertTrue(queryBuilder.tags().isEmpty());
                 assertNull(esQueryExec.query());
             }
         }
+    }
+
+    private static List<EsQueryExec.QueryBuilderAndTags> getBuilderAndTagsFromStats(ExchangeExec exchange, DataType aggregateType) {
+        FilterExec filter = as(exchange.child(), FilterExec.class);
+        GreaterThan condition = as(filter.condition(), GreaterThan.class);
+        Literal literal = as(condition.right(), Literal.class);
+
+        assertThat(literal.value(), is(0L));
+        EsStatsQueryExec statsQueryExec = as(filter.child(), EsStatsQueryExec.class);
+        assertThat(
+            statsQueryExec.output().stream().map(Attribute::dataType).toList(),
+            equalTo(List.of(aggregateType, DataType.LONG, DataType.BOOLEAN))
+        );
+        var left = as(condition.left(), ReferenceAttribute.class);
+        assertThat(left.id(), is(statsQueryExec.output().get(1).id()));
+        return as(statsQueryExec.stat(), EsStatsQueryExec.ByStat.class).queryBuilderAndTags();
     }
 
     /**
@@ -494,43 +552,33 @@ public class ReplaceRoundToWithQueryAndTagsTests extends AbstractLocalPhysicalPl
                 EsqlFlags esqlFlags = new EsqlFlags(clusterLevelThreshold);
                 assertEquals(clusterLevelThreshold, esqlFlags.roundToPushdownThreshold());
                 assertTrue(esqlFlags.stringLikeOnIndex());
-                PhysicalPlan plan = plannerOptimizerWithPragmas.plan(query, searchStats, esqlFlags);
-                boolean pushdown = false;
+                boolean pushdown;
                 if (queryLevelThreshold > -1) {
                     pushdown = queryLevelThreshold >= 127;
                 } else {
                     pushdown = clusterLevelThreshold >= 127;
                 }
 
-                LimitExec limit = as(plan, LimitExec.class);
-                AggregateExec agg = as(limit.child(), AggregateExec.class);
-                assertThat(agg.getMode(), is(FINAL));
-                List<? extends Expression> groupings = agg.groupings();
-                NamedExpression grouping = as(groupings.get(0), NamedExpression.class);
-                assertEquals("x", grouping.name());
-                assertEquals(DataType.INTEGER, grouping.dataType());
-                assertEquals(List.of("count(*)", "x"), Expressions.names(agg.aggregates()));
-                ExchangeExec exchange = as(agg.child(), ExchangeExec.class);
-                assertThat(exchange.inBetweenAggs(), is(true));
-                agg = as(exchange.child(), AggregateExec.class);
-                EvalExec evalExec = as(agg.child(), EvalExec.class);
-                List<Alias> aliases = evalExec.fields();
-                assertEquals(1, aliases.size());
+                ExchangeExec exchange = validatePlanBeforeExchange(
+                    plannerOptimizerWithPragmas.plan(query, searchStats, esqlFlags),
+                    DataType.INTEGER,
+                    List.of("count(*)")
+                );
                 if (pushdown) {
-                    FieldAttribute roundToTag = as(aliases.get(0).child(), FieldAttribute.class);
-                    assertTrue(roundToTag.name().startsWith("$$integer$round_to$"));
-                    EsQueryExec esQueryExec = as(evalExec.child(), EsQueryExec.class);
-                    List<EsQueryExec.QueryBuilderAndTags> queryBuilderAndTags = esQueryExec.queryBuilderAndTags();
-                    assertEquals(128, queryBuilderAndTags.size()); // 127 + nullBucket
-                    assertThrows(UnsupportedOperationException.class, esQueryExec::query);
+                    var queryBuilderAndTags = getQueryBuilderAndTags(exchange);
+                    assertThat(queryBuilderAndTags, hasSize(128)); // 127 + nullBucket
                 } else { // query rewrite does not happen
-                    RoundTo roundTo = as(aliases.get(0).child(), RoundTo.class);
+                    AggregateExec agg = as(exchange.child(), AggregateExec.class);
+                    EvalExec evalExec = as(agg.child(), EvalExec.class);
+                    List<Alias> aliases = evalExec.fields();
+                    assertEquals(1, aliases.size());
+                    RoundTo roundTo = as(aliases.getFirst().child(), RoundTo.class);
                     assertEquals(127, roundTo.points().size());
                     FieldExtractExec fieldExtractExec = as(evalExec.child(), FieldExtractExec.class);
                     EsQueryExec esQueryExec = as(fieldExtractExec.child(), EsQueryExec.class);
                     List<EsQueryExec.QueryBuilderAndTags> queryBuilderAndTags = esQueryExec.queryBuilderAndTags();
                     assertEquals(1, queryBuilderAndTags.size());
-                    EsQueryExec.QueryBuilderAndTags queryBuilder = queryBuilderAndTags.get(0);
+                    EsQueryExec.QueryBuilderAndTags queryBuilder = queryBuilderAndTags.getFirst();
                     assertNull(queryBuilder.query());
                     assertTrue(queryBuilder.tags().isEmpty());
                     assertNull(esQueryExec.query());
@@ -539,13 +587,59 @@ public class ReplaceRoundToWithQueryAndTagsTests extends AbstractLocalPhysicalPl
         }
     }
 
-    static String pointArray(int numPoints) {
+    private static List<EsQueryExec.QueryBuilderAndTags> getQueryBuilderAndTags(ExchangeExec exchange) {
+        return getBuilderAndTagsFromStats(exchange, DataType.INTEGER);
+    }
+
+    private ExchangeExec validatePlanBeforeExchange(String query, DataType aggregateType) {
+        return validatePlanBeforeExchange(query, aggregateType, List.of("count(*)"));
+    }
+
+    private ExchangeExec validatePlanBeforeExchange(String query, DataType aggregateType, List<String> aggregation) {
+        return validatePlanBeforeExchange(query, aggregateType, aggregation, null);
+    }
+
+    private ExchangeExec validatePlanBeforeExchange(
+        String query,
+        DataType aggregateType,
+        List<String> aggregation,
+        @Nullable QueryBuilder esFilter
+    ) {
+        return validatePlanBeforeExchange(
+            plannerOptimizer.plan(query, searchStats, makeAnalyzer("mapping-all-types.json"), esFilter),
+            aggregateType,
+            aggregation
+        );
+    }
+
+    private static ExchangeExec validatePlanBeforeExchange(PhysicalPlan plan, DataType aggregateType, List<String> aggregation) {
+        LimitExec limit = as(plan, LimitExec.class);
+
+        AggregateExec agg = as(limit.child(), AggregateExec.class);
+        assertThat(agg.getMode(), is(FINAL));
+        List<? extends Expression> groupings = agg.groupings();
+        NamedExpression grouping = as(groupings.getFirst(), NamedExpression.class);
+        assertEquals("x", grouping.name());
+        assertEquals(aggregateType, grouping.dataType());
+        assertEquals(CollectionUtils.appendToCopy(aggregation, "x"), Expressions.names(agg.aggregates()));
+
+        ExchangeExec exchange = as(agg.child(), ExchangeExec.class);
+        assertThat(exchange.inBetweenAggs(), is(true));
+        return exchange;
+    }
+
+    private static String pointArray(int numPoints) {
         return IntStream.range(0, numPoints).mapToObj(Integer::toString).collect(Collectors.joining(","));
     }
 
-    static int queryAndTags(PhysicalPlan plan) {
+    private static int plainQueryAndTags(PhysicalPlan plan) {
         EsQueryExec esQuery = (EsQueryExec) plan.collectFirstChildren(EsQueryExec.class::isInstance).getFirst();
         return esQuery.queryBuilderAndTags().size();
+    }
+
+    private static int statsQueryAndTags(PhysicalPlan plan) {
+        EsStatsQueryExec esQuery = (EsStatsQueryExec) plan.collectFirstChildren(EsStatsQueryExec.class::isInstance).getFirst();
+        return ((EsStatsQueryExec.ByStat) esQuery.stat()).queryBuilderAndTags().size();
     }
 
     public void testAdjustThresholdForQueries() {
@@ -556,7 +650,7 @@ public class ReplaceRoundToWithQueryAndTagsTests extends AbstractLocalPhysicalPl
                 | stats count(*) by x = round_to(integer, %s)
                 """, pointArray(points));
             PhysicalPlan plan = plannerOptimizer.plan(q, searchStats, makeAnalyzer("mapping-all-types.json"));
-            int queryAndTags = queryAndTags(plan);
+            int queryAndTags = statsQueryAndTags(plan);
             assertThat(queryAndTags, equalTo(points + 1)); // include null bucket
         }
         {
@@ -567,7 +661,7 @@ public class ReplaceRoundToWithQueryAndTagsTests extends AbstractLocalPhysicalPl
                 | stats count(*) by x = round_to(integer, %s)
                 """, pointArray(points));
             var plan = plannerOptimizer.plan(q, searchStats, makeAnalyzer("mapping-all-types.json"));
-            int queryAndTags = queryAndTags(plan);
+            int queryAndTags = plainQueryAndTags(plan);
             assertThat(queryAndTags, equalTo(points + 1)); // include null bucket
         }
         {
@@ -578,7 +672,7 @@ public class ReplaceRoundToWithQueryAndTagsTests extends AbstractLocalPhysicalPl
                 | stats count(*) by x = round_to(integer, %s)
                 """, pointArray(points));
             var plan = plannerOptimizer.plan(q, searchStats, makeAnalyzer("mapping-all-types.json"));
-            int queryAndTags = queryAndTags(plan);
+            int queryAndTags = plainQueryAndTags(plan);
             assertThat(queryAndTags, equalTo(1)); // no rewrite
         }
         {
@@ -590,7 +684,7 @@ public class ReplaceRoundToWithQueryAndTagsTests extends AbstractLocalPhysicalPl
                 | stats count(*) by x = round_to(integer, %s)
                 """, pointArray(points));
             var plan = plannerOptimizer.plan(q, searchStats, makeAnalyzer("mapping-all-types.json"));
-            int queryAndTags = queryAndTags(plan);
+            int queryAndTags = plainQueryAndTags(plan);
             assertThat("points=" + points, queryAndTags, equalTo(points + 1)); // include null bucket
         }
         {
@@ -602,7 +696,7 @@ public class ReplaceRoundToWithQueryAndTagsTests extends AbstractLocalPhysicalPl
                 | stats count(*) by x = round_to(integer, %s)
                 """, pointArray(points));
             PhysicalPlan plan = plannerOptimizer.plan(q, searchStats, makeAnalyzer("mapping-all-types.json"));
-            int queryAndTags = queryAndTags(plan);
+            int queryAndTags = plainQueryAndTags(plan);
             assertThat("points=" + points, queryAndTags, equalTo(1)); // no rewrite
         }
     }
@@ -613,7 +707,7 @@ public class ReplaceRoundToWithQueryAndTagsTests extends AbstractLocalPhysicalPl
             EsQueryExec.QueryBuilderAndTags expectedItem = expected.get(i);
             EsQueryExec.QueryBuilderAndTags actualItem = actual.get(i);
             assertEquals(expectedItem.query().toString(), actualItem.query().toString());
-            assertEquals(expectedItem.tags().get(0), actualItem.tags().get(0));
+            assertEquals(expectedItem.tags().getFirst(), actualItem.tags().getFirst());
         }
     }
 
@@ -707,6 +801,107 @@ public class ReplaceRoundToWithQueryAndTagsTests extends AbstractLocalPhysicalPl
         lastBucket.add(null);
         lastBucket.add(p4);
         return List.of(firstBucket, List.of(p2, p3, p2), List.of(p3, p4, p3), lastBucket);
+    }
+
+    public void testForkWithStatsCountStarDateTrunc() {
+        String query = """
+            from test
+            | fork (stats x = count(*), y = max(long) by hd = date_trunc(1 day, date))
+                   (stats x = count(*), y = min(long) by hd = date_trunc(2 day, date))
+            """;
+        PhysicalPlan plan = plannerOptimizer.plan(query, searchStats, makeAnalyzer("mapping-all-types.json"));
+
+        LimitExec limit = as(plan, LimitExec.class);
+        MergeExec merge = as(limit.child(), MergeExec.class);
+
+        List<PhysicalPlan> mergeChildren = merge.children();
+        assertThat(mergeChildren, hasSize(2));
+
+        PhysicalPlan firstBranch = mergeChildren.get(0);
+        ProjectExec firstProject = as(firstBranch, ProjectExec.class);
+        EvalExec firstEval = as(firstProject.child(), EvalExec.class);
+        LimitExec firstLimit = as(firstEval.child(), LimitExec.class);
+        AggregateExec firstFinalAgg = as(firstLimit.child(), AggregateExec.class);
+        assertThat(firstFinalAgg.getMode(), is(FINAL));
+        var firstGroupings = firstFinalAgg.groupings();
+        assertThat(firstGroupings, hasSize(1));
+        NamedExpression firstGrouping = as(firstGroupings.getFirst(), NamedExpression.class);
+        assertThat(firstGrouping.name(), is("hd"));
+        assertThat(firstGrouping.dataType(), is(DataType.DATETIME));
+        assertThat(Expressions.names(firstFinalAgg.aggregates()), is(List.of("x", "y", "hd")));
+
+        ExchangeExec firstExchange = as(firstFinalAgg.child(), ExchangeExec.class);
+        assertThat(firstExchange.inBetweenAggs(), is(true));
+        AggregateExec firstInitialAgg = as(firstExchange.child(), AggregateExec.class);
+        FieldExtractExec firstFieldExtract = as(firstInitialAgg.child(), FieldExtractExec.class);
+        EvalExec firstDateTruncEval = as(firstFieldExtract.child(), EvalExec.class);
+        as(firstDateTruncEval.child(), EsQueryExec.class);
+
+        PhysicalPlan secondBranch = mergeChildren.get(1);
+        ProjectExec secondProject = as(secondBranch, ProjectExec.class);
+        EvalExec secondEval = as(secondProject.child(), EvalExec.class);
+        LimitExec secondLimit = as(secondEval.child(), LimitExec.class);
+        AggregateExec secondFinalAgg = as(secondLimit.child(), AggregateExec.class);
+        assertThat(secondFinalAgg.getMode(), is(FINAL));
+        var secondGroupings = secondFinalAgg.groupings();
+        assertThat(secondGroupings, hasSize(1));
+        NamedExpression secondGrouping = as(secondGroupings.getFirst(), NamedExpression.class);
+        assertThat(secondGrouping.name(), is("hd"));
+        assertThat(secondGrouping.dataType(), is(DataType.DATETIME));
+        assertThat(Expressions.names(secondFinalAgg.aggregates()), is(List.of("x", "y", "hd")));
+
+        ExchangeExec secondExchange = as(secondFinalAgg.child(), ExchangeExec.class);
+        assertThat(secondExchange.inBetweenAggs(), is(true));
+        AggregateExec secondInitialAgg = as(secondExchange.child(), AggregateExec.class);
+        FieldExtractExec secondFieldExtract = as(secondInitialAgg.child(), FieldExtractExec.class);
+        EvalExec secondDateTruncEval = as(secondFieldExtract.child(), EvalExec.class);
+        FieldExtractExec secondDateFieldExtract = as(secondDateTruncEval.child(), FieldExtractExec.class);
+        as(secondDateFieldExtract.child(), EsQueryExec.class);
+    }
+
+    public void testSubqueryWithCountStarAndDateTrunc() {
+        assumeTrue("requires subqueries in from", EsqlCapabilities.Cap.SUBQUERY_IN_FROM_COMMAND.isEnabled());
+        String query = """
+            from test, (from test | stats cnt = count(*) by x = date_trunc(1 day, date))
+            | keep x, cnt, date
+            """;
+        PhysicalPlan plan = plannerOptimizer.plan(query, searchStats, makeAnalyzer("mapping-all-types.json"));
+
+        ProjectExec project = as(plan, ProjectExec.class);
+        LimitExec limit = as(project.child(), LimitExec.class);
+        MergeExec merge = as(limit.child(), MergeExec.class);
+
+        List<PhysicalPlan> mergeChildren = merge.children();
+        assertThat(mergeChildren, hasSize(2));
+
+        PhysicalPlan leftBranch = mergeChildren.get(0);
+        ProjectExec leftProject = as(leftBranch, ProjectExec.class);
+        EvalExec leftEval = as(leftProject.child(), EvalExec.class);
+        LimitExec leftLimit = as(leftEval.child(), LimitExec.class);
+        ExchangeExec leftExchange = as(leftLimit.child(), ExchangeExec.class);
+        ProjectExec leftInnerProject = as(leftExchange.child(), ProjectExec.class);
+        FieldExtractExec leftFieldExtract = as(leftInnerProject.child(), FieldExtractExec.class);
+        as(leftFieldExtract.child(), EsQueryExec.class);
+
+        PhysicalPlan rightBranch = mergeChildren.get(1);
+
+        ProjectExec subqueryProject = as(rightBranch, ProjectExec.class);
+        EvalExec subqueryEval = as(subqueryProject.child(), EvalExec.class);
+        LimitExec subqueryLimit = as(subqueryEval.child(), LimitExec.class);
+        AggregateExec finalAgg = as(subqueryLimit.child(), AggregateExec.class);
+        assertThat(finalAgg.getMode(), is(FINAL));
+        var groupings = finalAgg.groupings();
+        assertThat(groupings, hasSize(1));
+
+        ExchangeExec partialExchange = as(finalAgg.child(), ExchangeExec.class);
+        assertThat(partialExchange.inBetweenAggs(), is(true));
+
+        FilterExec filter = as(partialExchange.child(), FilterExec.class);
+        EsStatsQueryExec statsQueryExec = as(filter.child(), EsStatsQueryExec.class);
+
+        assertThat(statsQueryExec.stat(), is(instanceOf(EsStatsQueryExec.ByStat.class)));
+        EsStatsQueryExec.ByStat byStat = (EsStatsQueryExec.ByStat) statsQueryExec.stat();
+        assertThat(byStat.queryBuilderAndTags(), is(not(empty())));
     }
 
     private static SearchStats searchStats() {
